--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.54.8",
     "typescript": "*",
-    "vue-tsc": "^0.40.4"
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vue-tsc": "^1.0.9"
   }
 }
