--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@element-plus/icons-vue": "^2.0.10",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "axios": "^1.1.3",
     "element-plus": "^2.2.19",
     "pinia": "^2.0.21",
     "vite": "^3.1.0",
