--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -15,6 +15,7 @@ plugins:
 rules: {
   'import/no-unresolved': 'off',
   'import/extensions': 'off',
+  'import/prefer-default-export': 'off',
   'vue/multi-word-component-names': 'off',
   'no-param-reassign': 'off'
 }
