--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pinia": "^2.0.21",
     "vite": "^3.1.0",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.2.2",
     "vue-router": "4"
   },
   "devDependencies": {
