--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "element-plus": "^2.2.19",
     "path-browserify": "^1.0.1",
     "pinia": "^2.0.21",
+    "screenfull": "^6.0.2",
     "vite": "^3.1.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
