--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "axios": "^1.1.3",
     "element-plus": "^2.2.19",
+    "fuse.js": "^6.6.2",
     "path-browserify": "^1.0.1",
     "pinia": "^2.0.21",
     "screenfull": "^6.0.2",
