--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.6",
     "driver.js": "^0.9.8",
     "element-plus": "^2.2.19",
     "fuse.js": "^6.6.2",
