--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.11.6",
     "driver.js": "^0.9.8",
     "element-plus": "^2.2.19",
+    "file-saver": "^2.0.5",
     "fuse.js": "^6.6.2",
     "path-browserify": "^1.0.1",
     "pinia": "^2.0.21",
@@ -38,7 +39,8 @@
     "vite": "^3.1.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
-    "vue-router": "4"
+    "vue-router": "4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
